Inframodules/Nsg-rule/nsg-rules.tf


# Create Network Security Group and rule
resource "azurerm_network_security_group" "vm_terraform_nsg" {
  name                = "vm-NetworkSecurityGroup"
  location            = var.location
  resource_group_name = var.res-grp-name

  security_rule {
    name                       = "SSH"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "HTTP"
    priority                   = 1002
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}
